add: new tests: swagger